--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "discord.js": "^12.5.1",
     "google-auth-library": "^6.1.3",
     "googleapis": "^66.0.0",
-    "rss-feed-emitter": "^3.2.2"
+    "rss-feed-emitter": "^3.2.2",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {},
   "repository": {
