--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # User-Defined
 secrets.json
+server-data.db
 
 # Logs
 logs
@@ -105,3 +106,4 @@ dist
 
 # TernJS port file
 .tern-port
+server-data.db
